[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tonflow"
version = "0.2.0"
description = "Python toolkit for reading, decoding, normalizing, and locally caching TON blockchain data."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "kakharov", email = "kaharov95@gmail.com" }
]
keywords = ["ton", "blockchain", "jetton", "indexing", "web3"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
]

[project.optional-dependencies]
redis = [
  "redis>=5.0",
]
ws = [
  "websockets>=12.0",
]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/kakharov/tonflow"
Repository = "https://github.com/kakharov/tonflow"
Issues = "https://github.com/kakharov/tonflow/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tonflow"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["websockets", "websockets.*", "redis", "redis.*"]
ignore_missing_imports = true
